<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainScreenViewModel"
            type="com.thealphamerc.kotlin_calsee.MainScreenViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        tools:context=".MainScreen">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill">


            <TextView
                android:id="@+id/tvExpression"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="start"
                android:ellipsize="start"
                android:singleLine="true"
                android:text="@{MainScreenViewModel.expressionValue}"
                android:textColor="@color/actionButton"
                android:textSize="40sp" />

        </HorizontalScrollView>


        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{MainScreenViewModel.numericValue}"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvClear"
                    style="@style/ActionButtonStyle"
                    android:onClick='@{() -> MainScreenViewModel.onclearResult()}'
                    android:text="@string/clear" />

                <TextView
                    android:id="@+id/tvDivide"
                    style="@style/ActionButtonStyle"
                    android:onClick='@{() -> MainScreenViewModel.onAirthmaticSymbolTap("/")}'
                    android:text="@string/devide_symbol" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSeven"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(7)}"
                    android:text="@string/_7" />

                <TextView
                    android:id="@+id/tvEight"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(8)}"
                    android:text="@string/_8" />

                <TextView
                    android:id="@+id/tvNine"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(9)}"
                    android:text="@string/_9" />

                <TextView
                    android:id="@+id/tvMul"
                    style="@style/NumberActionButton2"
                    android:onClick='@{() -> MainScreenViewModel.onAirthmaticSymbolTap("*")}'
                    android:text="@string/multiply_symbol" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFour"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(4)}"
                    android:text="@string/_4" />

                <TextView
                    android:id="@+id/tvFive"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(5)}"
                    android:text="@string/_5" />

                <TextView
                    android:id="@+id/tvSix"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(6)}"
                    android:text="@string/_6" />

                <TextView
                    android:id="@+id/tvMinus"
                    style="@style/NumberActionButton2"
                    android:onClick='@{() -> MainScreenViewModel.onAirthmaticSymbolTap("-")}'
                    android:text="@string/minus_symbol" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOne"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(1)}"
                    android:text="@string/_1" />

                <TextView
                    android:id="@+id/tvTwo"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(2)}"
                    android:text="@string/_2" />

                <TextView
                    android:id="@+id/tvThree"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(3)}"
                    android:text="@string/_3" />

                <TextView
                    android:id="@+id/tvPlus"
                    style="@style/NumberActionButton2"
                    android:onClick='@{() -> MainScreenViewModel.onAirthmaticSymbolTap("+")}'
                    android:text="@string/plus_symbol" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDot"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onDecimalButtonTap()}"
                    android:text="@string/dot_symbol" />

                <TextView
                    android:id="@+id/tvZero"
                    style="@style/NumberButtonStyle"
                    android:onClick="@{() -> MainScreenViewModel.onNoTap(0)}"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/tvBack"
                    style="@style/NumberButtonStyle"
                    android:onClick='@{() -> MainScreenViewModel.onDeleteButtonTap()}'
                    android:text="@string/del" />

                <TextView
                    android:id="@+id/tvEquals"
                    style="@style/EqualButtonStyle"
                    android:onClick='@{() -> MainScreenViewModel.onCalculateResult()}'
                    android:text="@string/equal_symbol" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</layout>


